make view as good

--- a/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.css
+++ b/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.css
@@ -23,3 +23,6 @@
 .mat-drawer-container {
   /* height: 100vh; Set the height of the drawer container to full viewport height  */
 }
+.drawer-container {
+  height: 100vh; /* Set the height of the drawer container to full viewport height */
+}
