--- a/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.html
+++ b/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.html
@@ -11,7 +11,7 @@
     <button mat-button routerLink="login" (click)="logout()">Logout</button>
   </mat-toolbar>
 
-  <mat-drawer-container autosize>
+  <mat-drawer-container class="drawer-container" autosize>
     <mat-drawer #drawer position="start" mode="side" [opened]="isDrawerOpen" (click)="closeDrawer()">
       <mat-nav-list>
         <mat-list-item>
