--- a/DESK_MASTER/src/app/apps/employ-management/component/EmployeeSection/employ-home/employ-home.component.html
+++ b/DESK_MASTER/src/app/apps/employ-management/component/EmployeeSection/employ-home/employ-home.component.html
@@ -1,31 +1,32 @@
 <div class="row container">
- <div class="col-lg-4 col-md-6">
+  <div class="col-lg-4 col-md-6">
 
-  <mat-card class="example-card">
-   <mat-card-header class="dashboard-card">
-    <mat-card-title><button mat-button routerLink="employData">Biography</button></mat-card-title>
-   </mat-card-header>
-   <div class="card-image-container">
-    <img mat-card-image src="https://imatrix.com/wp-content/uploads/sites/12/2018/08/shutterstock_340900568.jpg" alt="">
-   </div>
-  </mat-card>
- </div>
+    <mat-card class="example-card">
+      <mat-card-header class="dashboard-card">
+        <mat-card-title><button mat-button routerLink="employData">Add Biography</button></mat-card-title>
+      </mat-card-header>
+      <div class="card-image-container">
+        <img mat-card-image src="https://imatrix.com/wp-content/uploads/sites/12/2018/08/shutterstock_340900568.jpg"
+          alt="">
+      </div>
+    </mat-card>
+  </div>
 
- <div class="col-lg-4 col-md-6">
-  <mat-card class="example-card">
-   <mat-card-header class="dashboard-card">
-    <mat-card-title><button mat-button routerLink="employ">
-      Profile</button></mat-card-title>
-   </mat-card-header>
-   <div class="card-image-container">
-    <img mat-card-image src="https://blog.hubspot.com/hubfs/meet-the-team.jpg#keepProtocol" alt="">
-   </div>
-   <mat-card-content>
-   </mat-card-content>
-  </mat-card>
- </div>
+  <div class="col-lg-4 col-md-6">
+    <mat-card class="example-card">
+      <mat-card-header class="dashboard-card">
+        <mat-card-title><button mat-button routerLink="employ">
+            Profile</button></mat-card-title>
+      </mat-card-header>
+      <div class="card-image-container">
+        <img mat-card-image src="https://blog.hubspot.com/hubfs/meet-the-team.jpg#keepProtocol" alt="">
+      </div>
+      <mat-card-content>
+      </mat-card-content>
+    </mat-card>
+  </div>
 
- <!-- <div class="col-lg-4 col-md-6">
+  <!-- <div class="col-lg-4 col-md-6">
   <mat-card class="example-card">
    <mat-card-header class="dashboard-card">
     <mat-card-title>Leave Management</mat-card-title>
