--- a/DESK_MASTER/src/app/apps/hr-view/component/hr-dashboard/hr-dashboard.component.html
+++ b/DESK_MASTER/src/app/apps/hr-view/component/hr-dashboard/hr-dashboard.component.html
@@ -44,7 +44,7 @@
     <mat-card class="example-card">
       <mat-card-header class="dashboard-card">
         <mat-card-title><button mat-button routerLink="employ">Employee
-            Profiles</button></mat-card-title>
+            Section</button></mat-card-title>
       </mat-card-header>
       <div class="card-image-container">
         <img mat-card-image src="https://blog.hubspot.com/hubfs/meet-the-team.jpg#keepProtocol" alt="">
