--- a/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.html
+++ b/DESK_MASTER/src/app/shared/Menu/menu-header/menu-header.component.html
@@ -23,13 +23,14 @@
       </mat-nav-list>
     </mat-drawer>
     <mat-drawer-content>
-      <div (click)="onContentClick()" [ngClass]="{'centered-content': !isDrawerOpen}">
+      <div (click)="onContentClick()">
+        <!-- [ngClass]="{'centered-content': !isDrawerOpen}" -->
         <router-outlet></router-outlet>
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
 </div>
 
-<div style="text-align: center;min-height: 600px;" *ngIf="!isMenuVisible">
+<div style="text-align: center " *ngIf="!isMenuVisible">
   <router-outlet></router-outlet>
 </div>
