--- a/Desk_Master_App/src/app/apps/employ-management/component/EmployeeSection/employ-data-entry/employ-data-entry.component.html
+++ b/Desk_Master_App/src/app/apps/employ-management/component/EmployeeSection/employ-data-entry/employ-data-entry.component.html
@@ -104,9 +104,7 @@
                   <div class="col-6" formGroupName="permanentAddress">
                     <h6>Permanent Address</h6>
                     <label class="form-check-label">
-                      <input type="checkbox" (change)="isSameAddress=!isSameAddress; onTogglePermanentAddress()"
-                        [(ngModel)]="isSameAddress">
-
+                      <input type="checkbox" (change)="isSameAddress=!isSameAddress; copyCurrentAddressToPermanent()">
                       Same as Current Address
                     </label>
                     <hr>
