--- a/Desk_Master_App/src/app/apps/employ-management/component/AdminSection/admin-view-employ-data/admin-view-employ-data.component.html
+++ b/Desk_Master_App/src/app/apps/employ-management/component/AdminSection/admin-view-employ-data/admin-view-employ-data.component.html
@@ -4,7 +4,7 @@
    <h1>Employee Details</h1>
   </mat-card-header>
   <mat-card-content>
-   <table mat-table [dataSource]="employeeData" multiTemplateDataRows class="mat-elevation-z8">
+   <!-- <table mat-table [dataSource]="employeeData" multiTemplateDataRows class="mat-elevation-z8">
 
     <ng-container *ngFor="let innerColumn of columnsToDisplay" matColumnDef="{{innerColumn}}">
      <th mat-header-cell *matHeaderCellDef>{{innerColumn | titlecase}}</th>
@@ -76,7 +76,45 @@
     <div *ngIf="isExpanded"></div>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail'];" class="expanded-row">
     </tr>
+   </table> -->
+
+
+
+   @if (employeeData.length > 1) {
+   <table mat-table [dataSource]="employeeData" class="mat-elevation-z8">
+    <!-- Define Columns -->
+    @for (column of employColumns; track column) {
+    <ng-container [matColumnDef]="column">
+     <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
+     <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+    </ng-container>
+    }
+    <!-- Action Column Def -->
+    <ng-container matColumnDef="actions">
+     <th mat-header-cell *matHeaderCellDef>Action</th>
+     <td mat-cell *matCellDef="let element">
+      <button mat-icon-button color="accent">
+       <mat-icon>visibility</mat-icon>
+      </button>
+      <button mat-icon-button color="primary">
+       <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn">
+       <mat-icon>delete</mat-icon>
+      </button>
+     </td>
+    </ng-container>
+
+    <!-- Define Header Row -->
+    <tr mat-header-row *matHeaderRowDef="employColumnsToDisplay.concat('actions')"></tr>
+
+    <!-- Define Data Rows -->
+    <tr mat-row *matRowDef="let row; columns: employColumnsToDisplay.concat('actions');"></tr>
    </table>
+   }
+
+
+
   </mat-card-content>
  </mat-card>
 </section>
