--- a/Desk_Master_App/src/app/apps/employ-management/component/EmployeeSection/employ-home/employ-home.component.html
+++ b/Desk_Master_App/src/app/apps/employ-management/component/EmployeeSection/employ-home/employ-home.component.html
@@ -15,7 +15,7 @@
   <div class="col-lg-4 col-md-6">
     <mat-card class="example-card">
       <mat-card-header class="dashboard-card">
-        <mat-card-title><button mat-button routerLink="employ">
+        <mat-card-title><button mat-button routerLink="/employ-profile">
             Profile</button></mat-card-title>
       </mat-card-header>
       <div class="card-image-container">
