change with type

--- a/Desk_Master_App/src/app/apps/hr-view/component/hr-dashboard/hr-dashboard.component.html
+++ b/Desk_Master_App/src/app/apps/hr-view/component/hr-dashboard/hr-dashboard.component.html
@@ -16,7 +16,7 @@
           </div>
           <mat-card-content>
             <span>Name: {{interview.candidateName}}</span> <br>
-            <span>Time: {{interview.timeSlot}}</span>
+            <span>Time: {{interview.time}}</span>
           </mat-card-content>
         </mat-card>
       </div>
