--- a/Desk_Master_App/src/app/apps/hr-view/component/interview-list/interview-list.component.html
+++ b/Desk_Master_App/src/app/apps/hr-view/component/interview-list/interview-list.component.html
@@ -3,7 +3,7 @@
   <mat-card>
     <mat-card-header>
       <h1>Interview Listing</h1>
-      <button mat-raised-button color="primary" style="margin-left: 10%;" routerLink="recruitmentTeam"> Interview Board
+      <button mat-raised-button color="primary" style="margin-left: 10%;" routerLink="/recruitmentTeam"> Interview Board
       </button>
       <button (click)="AddInterview()" mat-raised-button color="primary" style="margin-left: 40%;">Add Interview
         (+)</button>
@@ -38,14 +38,15 @@
         <!-- Time Column -->
         <ng-container matColumnDef="time">
           <th mat-header-cell *matHeaderCellDef>Time</th>
-          <td mat-cell *matCellDef="let interview"><button mat-raised-button (click)="onChangeTimeSlot(interview.id)">{{
-              interview.timeSlot }}</button></td>
+          <td mat-cell *matCellDef="let interview"><button mat-raised-button
+              (click)="onChangeTimeSlot(interview.id)">{{interview.time }}</button></td>
         </ng-container>
 
         <!-- Interviewer Column -->
         <ng-container matColumnDef="interviewer">
           <th mat-header-cell *matHeaderCellDef>Interviewer</th>
-          <td mat-cell *matCellDef="let interview">{{ interview.interviewer }}</td>
+          <td mat-cell *matCellDef="let interview"><span *ngFor="let interviewer of interview.interviewersList">{{
+              interviewer.name }}<br></span></td>
         </ng-container>
 
         <!-- Additional Info Column -->
